Added two small appes inside the main

--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,10 @@
     transform: rotate(360deg);
   }
 }
+.btn {
+  background-color: white;
+  font: inherit;
+  border: 3px solid blue;
+  padding: 8px;
+  cursor: pointer;
+}
